# Project_NyX

./: .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  setup.py
.agents/skills/framework-spec-writing/: SKILL.md
.agents/skills/macro-development/: SKILL.md
.agents/skills/macro-spec-writing/: SKILL.md  template.md
.agents/skills/pr-merge-cleanup/: SKILL.md
.agents/skills/pypi-release/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: pr-merge-cleanup.prompt.md
.github/skills/dev-journal/: SKILL.md
.github/skills/framework-spec-writing/: SKILL.md  template.md
.github/skills/macro-development/: SKILL.md
.github/skills/macro-spec-writing/: SKILL.md  template.md
.github/skills/pr-merge-cleanup/: SKILL.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: architecture.md  hardware_design.md  index.md  logging_design.md  macro_design.md  notification_system.md  protocol_design.md
docs/api/: framework.md
docs/architecture/swbt-integration/: README.md  abstraction-audit.md  adapter-discovery.md  architecture.md  configuration-cli-gui.md  controller-models.md  controller-port-contract.md  controller-session.md  imu-command.md  index.md  input-mapping.md  manual-input.md  mkdocs-nav.md  public-api.md  runtime-composition.md  swbt-service.md  testing-rollout.md  testing.md
docs/gui/: requirements.md  tech_stack_selection.md
docs/macro-development/: README.md  agent-brief.md  command-api.md  image-processing.md  macro-layout.md  macro-lifecycle.md  macro-template.md  manifest.md  nintendo-3ds.md  sample-macros.md  settings-and-resources.md  testing.md
docs/protocol/: ch552_protocol_spec.md  pokecon_protocol_spec.md
docs/user-guide/: README.md  cli.md  device-setup.md  gui.md  installation.md  notifications.md  troubleshooting.md
examples/macro/: __init__.py  sample_turbo_a_macro.py  test_ocr_init.py
examples/macro/frlg_gorgeous_resort/: frame_search.py  selphy_logic.py  species_data.py
examples/macro/frlg_id_rng/: __init__.py  frame_sweep.py
examples/macro/frlg_initial_seed/: __init__.py  config.py  csv_helper.py  macro.py  pokemon_gen.py  recognizer.py
examples/macro/frlg_wild_rng/: config.py  macro.py
examples/macro/nsmb_sort_or_splode/: __init__.py  recognizer.py
examples/macro/shared/: frlg_opening.py  image_utils.py  ocr_utils.py
examples/macros/: sample_turbo_a_macro.py  test_ocr_init.py
examples/macros/frlg_gorgeous_resort/: config.py  frame_search.py  macro.py  recognizer.py  selphy_logic.py
examples/macros/frlg_id_rng/: frame_sweep.py  keyboard_layout.py  macro.py  region_timing.py  soft_reset.py
examples/macros/frlg_initial_seed/: config.py  csv_helper.py  lcg32.py  macro.py  nature.py  recognizer.py  seed_solver.py
examples/macros/frlg_wild_rng/: config.py
examples/macros/nsmb_sort_or_splode/: config.py  macro.py  recognizer.py
examples/macros/shared/: frlg_opening.py  game_restart.py
examples/resources/frlg_gorgeous_resort/: settings.toml
examples/resources/frlg_id_rng/: settings.toml
examples/resources/frlg_initial_seed/: settings.toml
examples/resources/frlg_wild_rng/: settings.toml
examples/resources/nsmb_sort_or_splode/: settings.toml
examples/tests/perf/: test_nsmb_sort_or_splode_perf.py
macros/: frlg_id_rng.py  test_ocr_init.py
macros/frlg_gorgeous_resort/: __init__.py  config.py  frame_search.py  macro.py  recognizer.py  selphy_logic.py  species_data.py
macros/frlg_id_rng/: __init__.py  frame_sweep.py  keyboard_layout.py  macro.py  region_timing.py  soft_reset.py  tid_recognizer.py
macros/frlg_initial_seed/: config.py  csv_helper.py  lcg32.py  macro.py  nature.py  recognizer.py  seed_solver.py
macros/frlg_wild_rng/: __init__.py  config.py  macro.py
macros/nsmb_sort_or_splode/: config.py  macro.py  recognizer.py
macros/shared/: __init__.py  frlg_opening.py  game_restart.py  image_utils.py  timer.py
resources/nsmb_sort_or_splode/: settings.toml
spec/: dev-journal.md
spec/agent/local_006/: LAYOUT_IMPLEMENTATION_PLAN.md  (+3 more)
spec/docs/: MACRO_DEVELOPMENT_DOCUMENTATION_PLAN.md  MACRO_DEVELOPMENT_PHASE3_SPEC.md  RUFF_DOCSTRING_RULES.md  USER_GUIDE_DOCUMENTATION_PLAN.md
spec/gui/: LAYOUT_IMPLEMENTATION_PLAN.md  PREVIEW_AND_LOG_LAYOUT.md  WINDOW_SIZE_AND_PANEL_LAYOUT.md  WINDOW_SIZE_PRESETS.md
spec/macro/: frlg_id_rng.md  frlg_initial_seed.md  frlg_initial_seed_deferred.md  frlg_seed_solver.md
spec/wip/: SETTINGS_PREVIEW_CAPTURE_REFRESH.md
src/nyxpy/: __init__.py  __main__.py
src/utils/: helper.py
tests/: __init__.py  conftest.py
tests/gui/: conftest.py  test_app_services.py  test_capture_availability.py  test_device_settings_tab.py  test_general_settings_tab.py  test_layout_aspect.py  test_layout_presets.py  test_log_pane_user_event.py  test_macro_browser_pane.py  test_macro_catalog.py  test_macro_explorer_model.py  test_macro_reload.py  test_main_window.py  test_preview_pane.py  test_preview_update.py  test_settings_dialog.py  test_settings_tabs.py  test_snapshot.py  test_virtual_controller_layout.py  test_virtual_controller_model.py  test_worker_thread.py  test_worker_thread_progress.py
tests/hardware/: swbt_realdevice_support.py  test_3ds_serial_protocol_device.py  test_capture_device.py  test_macro_runtime_realdevice.py  test_ponkan_n3dsxl_capture_device.py  test_serial_comm.py  test_swbt_controller_backend_realdevice.py  test_windows_capture_backend_realdevice.py
tests/integration/: test_3ds_runtime_serial_protocol.py  test_capture_source_runtime.py  test_cli_runtime_adapter.py  test_dummy_macro_integration.py  test_macro_runtime_entrypoints.py  test_migrated_macro_compat.py  test_resource_file_io_migration.py  test_swbt_docs_examples.py  test_swbt_runtime_cli_integration.py
tests/perf/: test_command_perf.py  test_command_step_profile.py  test_logging_framework_perf.py  test_macro_discovery_perf.py  test_nsmb_sort_or_splode_perf.py  test_preview_runtime_frame_source_contention.py
tests/support/: __init__.py  fake_execution_context.py  fakes.py
tests/unit/: test_workspace_initialization.py
(+371 files in other folders)
