[project]
name = "project-nyx"
version = "0.1.0"
description = "NS Automation Framework"
authors = [
    {name = "niart120",email = "38847256+niart120@users.noreply.github.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyserial >=3.5,<4.0",
    "pillow>=12.2.0,<13.0.0",
    "loguru >=0.7.3,<0.8.0",
    "cv2-enumerate-cameras >=1.3.3,<2.0.0.0",
    "tomlkit >=0.13.3,<0.14.0",
    "requests>=2.34.0,<3.0.0",
    "setuptools >=82.0.1",
    "opencv-python>=4.13.0.92,<5.0.0.0",
    "pyside6>=6.11.0,<7.0.0",
    # OCR 系: PaddlePaddle 3.3.0/3.3.1 は oneDNN/PIR 回帰で CPU OCR が失敗するため上限維持。
    "paddlepaddle>=3.2.2,<3.3.0",
    "paddleocr>=3.5.0,<3.6.0",
    "chardet>=5.2.0,<6.0.0",
    "numpy>=2.3.5,<2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.12",
]

[project.scripts]
nyx-cli = "nyxpy.cli.run_cli:main"
nyx-gui = "nyxpy.gui.run_gui:main"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
targets.wheel.packages = ["src/nyxpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "realdevice: tests requiring real hardware devices (capture card, serial port)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.7.0",  # CVE-2026-21441 / CVE-2026-44432 対策
    "ujson>=5.12.0",  # CVE-2026-32875 / CVE-2026-32874 対策
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (flags from __future__ imports, old typing syntax, etc.)
]
ignore = [
    "E501",  # line too long — ruff format が担う
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]  # pytest.importorskip / sys.path.insert 後の import を許容

